Workshop3/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openweather-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openweather-app
        version: v1
    spec:
      containers:
      - name: openweather-container
        image: stackupiss/weather:v1
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
