Workshop3/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  openweather-svc
spec:
  selector:
    app: openweather-app
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  3000
