Workshop3/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: openweather-ingressgateway
  namespace: default
spec:
  selector:
    istio: ingressgateway #controller
  servers:
  - hosts: 
    - openweather.157.230.73.87.nip.io
    port:
      number: 80
      protocol: HTTP
      name: HTTP
