Workshop3/serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3 
kind: ServiceEntry
metadata:
  name: openweather-serviceentry
  namespace: default
spec:
  hosts:
  - "api.openweathermap.org"
  ports:
  - number: 80
    protocol: http
    name: http
  - number: 443
    protocol: https
    name: https
  location: MESH_EXTERNAL
  resolution: DNS
